/*
 * $Id: ChangeLog,v 1.1209 2003/07/02 18:08:20 walito Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-07-04 12:33 UTC+0200 Giancarlo Niccolai <giancarlo@niccolai.ws>
  * source/rtl/txml.prg
    + Added contestualization, that is a needed feature for init
      file parsing.
    ! Now iterators are well structured in an object oriented
      hierarcy.

  * incudle/hbxml.ch
    - removed uneeded iterator types

  * source/vm/errorapi.c
    ! When calling hb_errRT_BASE with a NULL in any of the arguments
      (most probably because the PRG program passed a NIL variable)
      there was a segfault. Fixed

  * doc/hbxml.txt
    ! Updated with current API.


2003-07-02 14:50 UTC-0300 Walter Negro <anegro@overnet.com.ar>
  * source/rtl/tbrowse.prg
    ! Fix bug in ::ForceStable()
      Reported by Luiz Culik
    ! Fix bug in ::Configure() to Add, Modificate or Delete Columns.

2003-07-02 12:07 UTC+0200 Giancarlo Niccolai <giancarlo@niccolai.ws>
  * doc/hbxml.txt
    ! Updated with current API.

  * source/rtl/txml.prg
    ! an empty FindFirst() was not scanning all the DOM tree.
      Fixed.
      

2003-07-01 15:09 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * contrib/Whoo/source/TOpenDialog.prg
  * contrib/what32/source/_wincdlg.c
  * contrib/what32/source/wincdlg.prg
    ! Fixed, optimized and some formatting.

2003-07-01 01:16 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  - contrib/Whoo/source/TControl.prg
  - contrib/Whoo/source/TCustomControl.prg
  - contrib/Whoo/source/TCustomImageList.prg
  - contrib/Whoo/source/THintWindow.prg
  - contrib/Whoo/source/TWinControl.prg
  + contrib/Whoo/source/controls.prg
    - Folded TControl, TCustomControl, TImageList, THintWindow and TWinControl into controls.prg
  * contrib/Whoo/makefile.bc
    * Updatated as per above.

  * source/rtl/set.c